# sandoracle

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE  PRD.txt  README.md  package-lock.json  package.json  projectrequirements.txt  run_simulation.sh  temp.txt
listen-core/: Cargo.toml
listen-core/src/: config.rs  lib.rs
listen-core/src/listen_engine/: mod.rs
listen-core/src/model/: mod.rs  token.rs  transaction.rs  tx.rs
listen-core/src/router/: dexes.rs  mod.rs  quote.rs
logs/: sandoseer.log.2025-04-10  sandoseer.log.2025-04-11
sandoracle-types/: Cargo.toml
sandoracle-types/src/: events.rs  lib.rs
src/: config.rs  jupiter_client.rs  lib.rs  main.rs  market_data.rs
src/config/: mod.rs
src/engine/: evaluator.rs  mod.rs  pipeline.rs
src/error/: mod.rs  utils.rs
src/evaluator/: arbitrage.rs  mod.rs  sandwich.rs  token_snipe.rs  utils.rs
src/executor/: mod.rs  strategies.rs  strategy_execution.rs
src/executor/tests/: mod.rs  strategies_test.rs
src/listen_bot/: config.rs  connection.rs  dex.rs  mod.rs  stream.rs  transaction.rs  types.rs
src/market_data/: mod.rs
src/monitoring/: log_utils.rs  mod.rs
src/rig_agent/: mod.rs
src/types/: mod.rs  transaction.rs
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
tests/: README.md  executor_test.rs  integration_tests.rs  strategy_execution_test.rs
~/: .bashrc
