[package]
name = "sandoseer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AI MEV Oracle for Solana - Autonomous MEV detection and execution system"

[dependencies]
# Local dependencies
listen-engine = { path = "./listen/listen-engine" }

# RIG Framework
rig-core = { git = "https://github.com/piotrostr/rig.git", branch = "main", default-features = false }

# Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"
solana-rpc-client = "1.18"
solana-rpc-client-api = "1.18"
solana-account-decoder = "1.18"
solana-pubsub-client = "1.18"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# Configuration
config = { version = "0.14", features = ["yaml", "toml", "json", "ini"] }
dotenv = "0.15"

# Utilities
chrono = "0.4"
rand = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
base64 = "0.21"
bs58 = "0.5"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
