[package]
name = "sandoseer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AI MEV Oracle for Solana - Autonomous MEV detection and execution system"

[dependencies]
# Local dependencies
listen-engine = { path = "./listen/listen-engine" }

# RIG Framework
rig-core = { git = "https://github.com/piotrostr/rig.git", branch = "main", default-features = false }

# Solana dependencies
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program = "=2.2.1"
solana-transaction-status = "2.2.1"
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-account-decoder = "2.2.1"
solana-pubsub-client = "2.2.1"
solana-transaction = "=2.2.1"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.0.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# Configuration
config = { version = "0.14", features = ["yaml", "toml", "json", "ini"] }
dotenv = "0.15"

# Utilities
chrono = "0.4"
rand = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
base64 = "0.21"
bs58 = "0.5"

# Pin rustls to resolve conflict from listen-engine -> reqwest
# rustls = "=0.23.26"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Async traits
async-trait = "0.1"

# SPL Tokens (using versions compatible with Solana 2.x)
# Let Cargo resolve based on listen-data needs
spl-token = "5.0.2"
# spl-associated-token-account = "3.0.2"

# Pin SPL utility crates to latest versions compatible with Solana 2.x - REMOVING PINNING
# spl-type-length-value = "=0.7.0"
# spl-pod = "=0.5.1"
# spl-discriminator = "=0.4.1"
# spl-tlv-account-resolution = "=0.9.0"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

# Add patch - assuming it's necessary even for origin/master state
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# Remove all SPL patches
# [patch.crates-io.spl-token]
# package = "spl-token"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
# 
# [patch.crates-io.spl-associated-token-account]
# package = "spl-associated-token-account"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
# 
# [patch.crates-io.spl-type-length-value]
# package = "spl-type-length-value"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
# 
# [patch.crates-io.spl-pod]
# package = "spl-pod"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
# 
# [patch.crates-io.spl-discriminator]
# package = "spl-discriminator"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
# 
# [patch.crates-io.spl-tlv-account-resolution]
# package = "spl-tlv-account-resolution"
# git = "https://github.com/solana-labs/solana-program-library.git"
# branch = "master"
