[package]
name = "sandoseer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AI MEV Oracle for Solana - Autonomous MEV detection and execution system"

[dependencies]
# Local dependencies
listen-core = { path = "./listen-core" }

# RIG Framework
rig-core = { git = "https://github.com/piotrostr/rig.git", branch = "main", default-features = false }

# Solana dependencies - Match listen-engine version
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
solana-program = "=2.2.1"
solana-transaction-status = "=2.2.1"
solana-rpc-client = "=2.2.1"
solana-rpc-client-api = "=2.2.1"
solana-account-decoder = "=2.2.1"
solana-pubsub-client = "=2.2.1"

# Force specific rustls versions
rustls = "=0.23.22"
rustls-pemfile = "=1.0.4"
rustls-webpki = "=0.101.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.0.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }

# Configuration
config = { version = "0.14", features = ["yaml", "toml", "json", "ini"] }
dotenv = "0.15"

# Utilities
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
base64 = "0.21"
bs58 = "0.5"
lazy_static = "1.4.0"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Async traits
async-trait = "0.1"

# SPL Tokens - Use compatible versions
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }

sandoracle-types = { path = "./sandoracle-types" }

uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[patch.crates-io]
# Force curve25519-dalek version
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
