[package]
name = "listen-core"
version = "0.1.0"
edition = "2021"
description = "Core components from the listen project for Solana DEX transaction monitoring and routing"
license = "MIT"

[dependencies]
# Solana dependencies - Align with sandoseer's version
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
solana-transaction-status = "=2.2.1"
# Add other Solana crates if listen-core uses them directly and needs alignment
# solana-program = "=2.2.1" # Example

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }

# Logging
tracing = "0.1"

# Utilities
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
chrono = "0.4"

# Websocket dependencies
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
# ... (Add listen-core specific dependencies if any were missed, e.g. model, router?)

# Stream utilities
async-stream = "0.3"
